--- a/Pages/about-author.html
+++ b/Pages/about-author.html
@@ -3,61 +3,56 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Explore the life and writing journey of Oluwafemi Odesola, a master storyteller and scholar.">
     <title>About the Author</title>
     <link rel="stylesheet" href="css/styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
-    <!-- Navigation Bar -->
     <nav class="navbar">
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about-author.html">About the Author</a></li>
-            <li><a href="book-details.html">The Book</a></li>
-            <li><a href="sendforth.html">Sendforth</a></li>
-            <li><a href="purchase.html">Purchase</a></li>
-            <li><a href="contact.html">Contact</a></li>
-        </ul>
-    </nav>
-
-    <!-- About Author Section -->
-    <section class="about-author">
-        <img src="https://via.placeholder.com/300x300" alt="Author Photo">
-        <div class="about-author-text">
-            <h2>About [Author Name]</h2>
-            <p>
-                [Author Name] is a dedicated writer whose passion for storytelling shines through in their work. With a background in [field/experience], they craft narratives that inspire and uplift readers.
-            </p>
-            <p>
-                Recognized for [achievements, e.g., awards, publications], [Author Name] has made a significant impact in [relevant field]. Their latest book reflects their commitment to [core theme or mission].
-            </p>
-            <div class="social-links">
-                <a href="https://facebook.com" data-platform="Facebook"><i class="fab fa-facebook-f"></i></a>
-                <a href="https://twitter.com" data-platform="Twitter"><i class="fab fa-twitter"></i></a>
-                <a href="https://instagram.com" data-platform="Instagram"><i class="fab fa-instagram"></i></a>
-                <a href="https://linkedin.com" data-platform="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
-            </div>
-        </div>
-    </section>
-
-    <!-- Footer -->
-    <footer class="footer">
+        <a href="index.html" class="logo">Oluwafemi Odesola</a>
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="about-author.html">About</a></li>
-            <li><a href="book-details.html">Book</a></li>
-            <li><a href="sendforth.html">Sendforth</a></li>
+            <li><a href="about-book.html">Book</a></li>
             <li><a href="purchase.html">Purchase</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
-        <div class="social-links">
-            <a href="https://facebook.com" data-platform="Facebook"><i class="fab fa-facebook-f"></i></a>
-            <a href="https://twitter.com" data-platform="Twitter"><i class="fab fa-twitter"></i></a>
-            <a href="https://instagram.com" data-platform="Instagram"><i class="fab fa-instagram"></i></a>
-            <a href="https://linkedin.com" data-platform="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
+        <div class="contact-info">
+            <a href="mailto:oluwafemiodesola@gmail.com">oluwafemiodesola@gmail.com</a>
         </div>
-        <p>© [Author Name] 2025</p>
+    </nav>
+    <section class="about-author">
+        <div class="about-author-content">
+            <h2>About the Author</h2>
+            <div class="about-author-section">
+                <div class="text-image-pair">
+                    <img src="images/authorpic4.jpg" alt="Oluwafemi Odesola with Family">
+                    <div class="text-content">
+                        <p>Oluwafemi Odesola is a dynamic scholar, writer, and sustainable development practitioner with a deep passion for faith, research, and sociopolitical engagement. He holds a Bachelor’s degree in Agricultural Economics and a Master’s in Sustainable Development from the University of Ibadan, Nigeria. Now based in the United Kingdom, he integrates academic depth with purposeful writing, specializing in research, citations, biographies, and sociopolitical analysis.</p>
+                        <p>A devoted disciple of Christ, Oluwafemi has enjoyed 18 years of close spiritual mentorship under Rev’d Dr. John Akin Oyelade, serving as both his son in the Lord and interpreter. This enduring relationship has significantly shaped his theological outlook and inspired much of his writing.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="about-author-section">
+                <div class="text-image-pair">
+                    <img src="images/authorpic3.jpg" alt="Oluwafemi Odesola Speaking">
+                    <div class="text-content">
+                        <p>As a thoughtful and engaged voice, he has presented research papers at international conferences in South Africa and the United States, contributing to global conversations on sustainable development and faith-informed approaches to societal challenges. Beyond his intellectual and spiritual endeavors, Oluwafemi is a loving husband to Mary Mercy. Together, they make their home in the UK.</p>
+                        <p>This book embodies his distinctive fusion of scholarly rigor, spiritual depth, and literary passion written to inspire, educate, and stir meaningful reflection.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <footer class="footer">
+        <div class="social-links">
+            <a href="https://www.facebook.com/share/16LDQ3vMWJ/?mibextid=wwXIfr" target="_blank" data-social="Facebook"><i class="fab fa-facebook-f"></i></a>
+            <a href="https://www.instagram.com/huntersolah?igsh=MWZoaWFwaTA3dzc0Zw%3D%3D&utm_source=qr" target="_blank" data-social="Instagram"><i class="fab fa-instagram"></i></a>
+            <a href="https://x.com/huntersola_v?s=21" target="_blank" data-social="Twitter"><i class="fab fa-twitter"></i></a>
+            <a href="https://www.linkedin.com/in/odesola-oluwafemi-0b6039b0?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3Bocd2dvfVR3%2BqgZa63bonQQ%3D%3D" target="_blank" data-social="LinkedIn"><i class="fab fa-linkedin"></i></a>
+        </div>
+        <p>© 2025 Oluwafemi Odesola. All rights reserved.</p>
     </footer>
 </body>
 </html>
