--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -3,60 +3,51 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Get in touch with Oluwafemi Odesola for updates and inquiries.">
     <title>Contact</title>
     <link rel="stylesheet" href="css/styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
-    <!-- Navigation Bar -->
     <nav class="navbar">
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about-author.html">About the Author</a></li>
-            <li><a href="book-details.html">The Book</a></li>
-            <li><a href="sendforth.html">Sendforth</a></li>
-            <li><a href="purchase.html">Purchase</a></li>
-            <li><a href="contact.html">Contact</a></li>
-        </ul>
-    </nav>
-
-    <!-- Contact Section -->
-    <section class="contact">
-        <h2>Get in Touch</h2>
-        <p>Connect with [Author Name] for inquiries or to share your thoughts.</p>
-        <div class="social-links">
-            <a href="https://facebook.com" data-platform="Facebook"><i class="fab fa-facebook-f"></i></a>
-            <a href="https://twitter.com" data-platform="Twitter"><i class="fab fa-twitter"></i></a>
-            <a href="https://instagram.com" data-platform="Instagram"><i class="fab fa-instagram"></i></a>
-            <a href="https://linkedin.com" data-platform="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
-        </div>
-        <p class="form-instruction">Feel free to share your heartfelt message with us.</p>
-        <form class="contact-form" data-netlify="true" name="contact">
-            <input type="text" name="name" placeholder="Your Name" required>
-            <input type="email" name="email" placeholder="Your Email" required>
-            <textarea name="message" placeholder="Your Message" rows="5" required></textarea>
-            <button type="submit">Send Message</button>
-        </form>
-    </section>
-
-    <!-- Footer -->
-    <footer class="footer">
+        <a href="index.html" class="logo">Oluwafemi Odesola</a>
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="about-author.html">About</a></li>
-            <li><a href="book-details.html">Book</a></li>
-            <li><a href="sendforth.html">Sendforth</a></li>
+            <li><a href="about-book.html">Book</a></li>
             <li><a href="purchase.html">Purchase</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
-        <div class="social-links">
-            <a href="https://facebook.com" data-platform="Facebook"><i class="fab fa-facebook-f"></i></a>
-            <a href="https://twitter.com" data-platform="Twitter"><i class="fab fa-twitter"></i></a>
-            <a href="https://instagram.com" data-platform="Instagram"><i class="fab fa-instagram"></i></a>
-            <a href="https://linkedin.com" data-platform="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
+        <div class="contact-info">
+            <a href="mailto:oluwafemiodesola@gmail.com">oluwafemiodesola@gmail.com</a>
         </div>
-        <p>© [Author Name] 2025</p>
+    </nav>
+    <section class="contact">
+        <div class="contact-content">
+            <h2>Contact Me</h2>
+            <p>Have questions or want to stay updated? Reach out!</p>
+            <p class="form-instruction">Fill out the form below to connect.</p>
+            <div class="contact-layout">
+                <form name="contact" method="POST" data-netlify="true" class="contact-form">
+                    <input type="text" name="name" placeholder="Your Name" required>
+                    <input type="email" name="email" placeholder="Your Email" required>
+                    <textarea name="message" placeholder="Your Message" required></textarea>
+                    <div class="button-spacing">
+                        <button type="submit">Send Message</button>
+                    </div>
+                </form>
+                <img src="images/authorpic5.jpg" alt="Author Illustration" class="side-image">
+            </div>
+        </div>
+    </section>
+    <footer class="footer">
+        <div class="social-links">
+            <a href="https://www.facebook.com/share/16LDQ3vMWJ/?mibextid=wwXIfr" target="_blank" data-social="Facebook"><i class="fab fa-facebook-f"></i></a>
+            <a href="https://www.instagram.com/huntersolah?igsh=MWZoaWFwaTA3dzc0Zw%3D%3D&utm_source=qr" target="_blank" data-social="Instagram"><i class="fab fa-instagram"></i></a>
+            <a href="https://x.com/huntersola_v?s=21" target="_blank" data-social="Twitter"><i class="fab fa-twitter"></i></a>
+            <a href="https://www.linkedin.com/in/odesola-oluwafemi-0b6039b0?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3Bocd2dvfVR3%2BqgZa63bonQQ%3D%3D" target="_blank" data-social="LinkedIn"><i class="fab fa-linkedin"></i></a>
+        </div>
+        <p>© 2025 Oluwafemi Odesola. All rights reserved.</p>
     </footer>
 </body>
 </html>
