--- a/Pages/index.html
+++ b/Pages/index.html
@@ -3,48 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Author Landing Page</title>
+    <meta name="description" content="Discover Oluwafemi Odesola, a renowned author with a new story on the horizon. Stay tuned for an unforgettable journey.">
+    <title>Home - Oluwafemi Odesola</title>
     <link rel="stylesheet" href="css/styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
-    <!-- Navigation Bar -->
     <nav class="navbar">
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about-author.html">About the Author</a></li>
-            <li><a href="book-details.html">The Book</a></li>
-            <li><a href="sendforth.html">Sendforth</a></li>
-            <li><a href="purchase.html">Purchase</a></li>
-            <li><a href="contact.html">Contact</a></li>
-        </ul>
-    </nav>
-
-    <!-- Hero Section -->
-    <section class="hero">
-        <h1>[Author Name]</h1>
-        <p>"Inspiring stories that touch the heart."</p>
-        <a href="about-author.html" class="explore-btn">Explore More</a>
-    </section>
-
-    <!-- Footer -->
-    <footer class="footer">
+        <a href="index.html" class="logo">Oluwafemi Odesola</a>
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="about-author.html">About</a></li>
-            <li><a href="book-details.html">Book</a></li>
-            <li><a href="sendforth.html">Sendforth</a></li>
+            <li><a href="about-book.html">Book</a></li>
             <li><a href="purchase.html">Purchase</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
-        <div class="social-links">
-            <a href="https://facebook.com" data-platform="Facebook"><i class="fab fa-facebook-f"></i></a>
-            <a href="https://twitter.com" data-platform="Twitter"><i class="fab fa-twitter"></i></a>
-            <a href="https://instagram.com" data-platform="Instagram"><i class="fab fa-instagram"></i></a>
-            <a href="https://linkedin.com" data-platform="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
+        <div class="contact-info">
+            <a href="mailto:oluwafemiodesola@gmail.com">oluwafemiodesola@gmail.com</a>
         </div>
-        <p>© [Author Name] 2025</p>
+    </nav>
+    <section class="hero">
+        <div class="hero-content">
+            <h1>Meet Oluwafemi Odesola</h1>
+            <p>A celebrated scholar and writer bringing a new narrative to life. Explore the journey ahead.</p>
+            <a href="about-book.html" class="hero-btn">Discover the Book</a>
+        </div>
+    </section>
+    <footer class="footer">
+        <div class="social-links">
+            <a href="https://www.facebook.com/share/16LDQ3vMWJ/?mibextid=wwXIfr" target="_blank" data-social="Facebook"><i class="fab fa-facebook-f"></i></a>
+            <a href="https://www.instagram.com/huntersolah?igsh=MWZoaWFwaTA3dzc0Zw%3D%3D&utm_source=qr" target="_blank" data-social="Instagram"><i class="fab fa-instagram"></i></a>
+            <a href="https://x.com/huntersola_v?s=21" target="_blank" data-social="Twitter"><i class="fab fa-twitter"></i></a>
+            <a href="https://www.linkedin.com/in/odesola-oluwafemi-0b6039b0?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3Bocd2dvfVR3%2BqgZa63bonQQ%3D%3D" target="_blank" data-social="LinkedIn"><i class="fab fa-linkedin"></i></a>
+</a>
+        </div>
+        <p>© 2025 Oluwafemi Odesola. All rights reserved.</p>
     </footer>
 </body>
 </html>
