--- a/Pages/purchase.html
+++ b/Pages/purchase.html
@@ -3,49 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Purchase 'Jesus Revealed, Jesus Glorified' by Oluwafemi Odesola on Amazon.">
     <title>Purchase</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="css/styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
-<body>
-    <!-- Navigation Bar -->
+<body class="about-book">
     <nav class="navbar">
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about-author.html">About the Author</a></li>
-            <li><a href="book-details.html">The Book</a></li>
-            <li><a href="sendforth.html">Sendforth</a></li>
-            <li><a href="purchase.html">Purchase</a></li>
-            <li><a href="contact.html">Contact</a></li>
-        </ul>
-    </nav>
-
-    <!-- Purchase Section -->
-    <section class="purchase">
-        <h2>Purchase [Book Title]</h2>
-        <img src="https://via.placeholder.com/200x300" alt="Book Cover">
-        <p>Discover [Book Title], a story that inspires and uplifts with every page.</p>
-        <a href="https://www.amazon.com" class="buy-now-btn">Buy Now on Amazon</a>
-    </section>
-
-    <!-- Footer -->
-    <footer class="footer">
+        <a href="index.html" class="logo">Oluwafemi Odesola</a>
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="about-author.html">About</a></li>
-            <li><a href="book-details.html">Book</a></li>
-            <li><a href="sendforth.html">Sendforth</a></li>
+            <li><a href="about-book.html">Book</a></li>
             <li><a href="purchase.html">Purchase</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
-        <div class="social-links">
-            <a href="https://facebook.com" data-platform="Facebook"><i class="fab fa-facebook-f"></i></a>
-            <a href="https://twitter.com" data-platform="Twitter"><i class="fab fa-twitter"></i></a>
-            <a href="https://instagram.com" data-platform="Instagram"><i class="fab fa-instagram"></i></a>
-            <a href="https://linkedin.com" data-platform="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
+        <div class="contact-info">
+            <a href="mailto:oluwafemiodesola@gmail.com">oluwafemiodesola@gmail.com</a>
         </div>
-        <p>© [Author Name] 2025</p>
+    </nav>
+    <section class="purchase">
+        <div class="book-card">
+            <img src="images/booksite2.jpg" alt="Book Cover">
+            <div class="book-card-text">
+                <h3>Jesus Revealed, Jesus Glorified</h3>
+                <p>Experience a transformative read that offers inspiration and insight into Christlike leadership. Secure your copy to join this spiritual journey.</p>
+                <div class="button-spacing">
+                    <a href="https://www.amazon.com" target="_blank" class="buy-now-btn">Buy on Amazon</a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <footer class="footer">
+        <div class="social-links">
+            <a href="https://www.facebook.com/share/16LDQ3vMWJ/?mibextid=wwXIfr" target="_blank" data-social="Facebook"><i class="fab fa-facebook-f"></i></a>
+            <a href="https://www.instagram.com/huntersolah?igsh=MWZoaWFwaTA3dzc0Zw%3D%3D&utm_source=qr" target="_blank" data-social="Instagram"><i class="fab fa-instagram"></i></a>
+            <a href="https://x.com/huntersola_v?s=21" target="_blank" data-social="Twitter"><i class="fab fa-twitter"></i></a>
+            <a href="#" target="_blank" data-social="LinkedIn"><i class="fab fa-linkedin"></i></a>
+        </div>
+        <p>© 2025 Oluwafemi Odesola. All rights reserved.</p>
     </footer>
 </body>
 </html>
