--- a/Pages/sendforth.html
+++ b/Pages/sendforth.html
@@ -3,65 +3,56 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Join the Sendforth Program honoring Rev. Dr. John Akin Oyelade and celebrating 'Jesus Revealed, Jesus Glorified.'">
     <title>Sendforth Program</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="css/styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
-<body>
-    <!-- Navigation Bar -->
+<body class="sendforth">
     <nav class="navbar">
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about-author.html">About the Author</a></li>
-            <li><a href="book-details.html">The Book</a></li>
-            <li><a href="sendforth.html">Sendforth</a></li>
-            <li><a href="purchase.html">Purchase</a></li>
-            <li><a href="contact.html">Contact</a></li>
-        </ul>
-    </nav>
-
-    <!-- Sendforth Program Section -->
-    <section class="sendforth">
-        <h2>Sendforth Program</h2>
-        <div class="stepper">
-            <div class="stepper-item">
-                <i class="fas fa-calendar-alt"></i>
-                <p><strong>Date:</strong> [MM/DD/YYYY]</p>
-            </div>
-            <div class="stepper-item">
-                <i class="fas fa-clock"></i>
-                <p><strong>Time:</strong> [6:00 PM]</p>
-            </div>
-            <div class="stepper-item">
-                <i class="fas fa-map-marker-alt"></i>
-                <p><strong>Venue:</strong> [Church Name, City]</p>
-            </div>
-            <div class="stepper-item">
-                <i class="fas fa-user"></i>
-                <p><strong>Agenda:</strong> Opening Prayer, Book Reading, Guest Speaker</p>
-            </div>
-        </div>
-        <a href="mailto:[email]" class="rsvp-btn">RSVP Now</a>
-    </section>
-
-    <!-- Footer -->
-    <footer class="footer">
+        <a href="index.html" class="logo">Oluwafemi Odesola</a>
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="about-author.html">About</a></li>
-            <li><a href="book-details.html">Book</a></li>
-            <li><a href="sendforth.html">Sendforth</a></li>
+            <li><a href="about-book.html">Book</a></li>
             <li><a href="purchase.html">Purchase</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
-        <div class="social-links">
-            <a href="https://facebook.com" data-platform="Facebook"><i class="fab fa-facebook-f"></i></a>
-            <a href="https://twitter.com" data-platform="Twitter"><i class="fab fa-twitter"></i></a>
-            <a href="https://instagram.com" data-platform="Instagram"><i class="fab fa-instagram"></i></a>
-            <a href="https://linkedin.com" data-platform="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
+        <div class="contact-info">
+            <a href="mailto:oluwafemiodesola@gmail.com">oluwafemiodesola@gmail.com</a>
         </div>
-        <p>© [Author Name] 2025</p>
+    </nav>
+    <section class="sendforth">
+        <div class="sendforth-content">
+            <h2>Sendforth Program</h2>
+            <div class="stepper">
+                <div class="stepper-item">
+                    <i class="fas fa-calendar"></i>
+                    <p><strong>Date:</strong> July 15, 2025</p>
+                </div>
+                <div class="stepper-item">
+                    <i class="fas fa-map-marker-alt"></i>
+                    <p><strong>Venue:</strong> Fountain of Peace Baptist Church, Òyó</p>
+                </div>
+                <div class="stepper-item">
+                    <i class="fas fa-info-circle"></i>
+                    <p><strong>Purpose:</strong> This event honors Rev. Dr. John Akin Oyelade for his transformative leadership at Fountain of Peace Baptist Church, celebrating his legacy as depicted in 'Jesus Revealed, Jesus Glorified.' It’s a call to continue his work of revealing Christ and glorifying God.</p>
+                </div>
+            </div>
+            <img src="images/sendforth1.jpg" alt="Sendforth Event" class="side-image">
+            <div class="button-spacing">
+                <a href="contact.html" class="rsvp-btn">RSVP Now</a>
+            </div>
+        </div>
+    </section>
+    <footer class="footer">
+        <div class="social-links">
+            <a href="https://www.facebook.com/share/16LDQ3vMWJ/?mibextid=wwXIfr" target="_blank" data-social="Facebook"><i class="fab fa-facebook-f"></i></a>
+            <a href="https://www.instagram.com/huntersolah?igsh=MWZoaWFwaTA3dzc0Zw%3D%3D&utm_source=qr" target="_blank" data-social="Instagram"><i class="fab fa-instagram"></i></a>
+            <a href="https://x.com/huntersola_v?s=21" target="_blank" data-social="Twitter"><i class="fab fa-twitter"></i></a>
+            <a href="https://www.linkedin.com/in/odesola-oluwafemi-0b6039b0?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3Bocd2dvfVR3%2BqgZa63bonQQ%3D%3D" target="_blank" data-social="LinkedIn"><i class="fab fa-linkedin"></i></a>
+        </div>
+        <p>© 2025 Oluwafemi Odesola. All rights reserved.</p>
     </footer>
 </body>
 </html>
