--- a/Pages/sendforth.html
+++ b/Pages/sendforth.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Join the Sendforth Program honoring Rev. Dr. John Akin Oyelade and celebrating 'Jesus Revealed, Jesus Glorified.'">
     <title>Sendforth Program</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body class="sendforth">
     <nav class="navbar">
@@ -39,6 +39,10 @@
                     <p><strong>Purpose:</strong> This event honors Rev. Dr. John Akin Oyelade for his transformative leadership at Fountain of Peace Baptist Church, celebrating his legacy as depicted in 'Jesus Revealed, Jesus Glorified.' It’s a call to continue his work of revealing Christ and glorifying God.</p>
                 </div>
             </div>
+            <div class="countdown-container">
+                <div id="countdown" class="countdown"></div>
+                <p class="launch-text">LAUNCHING SOON!</p>
+            </div>
             <img src="images/sendforth1.jpg" alt="Sendforth Event" class="side-image">
             <div class="button-spacing">
                 <a href="contact.html" class="rsvp-btn">RSVP Now</a>
@@ -54,5 +58,41 @@
         </div>
         <p>© 2025 Oluwafemi Odesola. All rights reserved.</p>
     </footer>
+    <script>
+        function updateCountdown() {
+            const launchDate = new Date("July 20, 2025 00:00:00").getTime();
+            const now = new Date().getTime();
+            const distance = launchDate - now;
+
+            const days = Math.floor(distance / (1000 * 60 * 60 * 24));
+            const hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+            const minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
+            const seconds = Math.floor((distance % (1000 * 60)) / 1000);
+
+            document.getElementById("countdown").innerHTML = `
+                <div class="countdown-item"><span class="count">${days}</span><br>Days</div>
+                <div class="countdown-item"><span class="count">${hours}</span><br>Hours</div>
+                <div class="countdown-item"><span class="count">${minutes}</span><br>Minutes</div>
+                <div class="countdown-item"><span class="count">${seconds}</span><br>Seconds</div>
+            `;
+
+            // Smooth transition for numbers
+            const counts = document.querySelectorAll(".count");
+            counts.forEach(count => {
+                count.style.transition = "all 0.5s ease-out";
+                count.style.transform = "scale(1.1)";
+                setTimeout(() => {
+                    count.style.transform = "scale(1)";
+                }, 500);
+            });
+
+            if (distance < 0) {
+                document.getElementById("countdown").innerHTML = "Launched!";
+            }
+        }
+
+        setInterval(updateCountdown, 1000);
+        updateCountdown();
+    </script>
 </body>
 </html>
