--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Get in touch with Oluwafemi Odesola for updates and inquiries.">
+    <meta name="description" content="Get in touch with Oluwafemi Odesola for inquiries about his book and events.">
     <title>Contact</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
-<body>
+<body class="contact">
     <nav class="navbar">
         <a href="index.html" class="logo">Oluwafemi Odesola</a>
         <ul>
@@ -24,19 +24,24 @@
     </nav>
     <section class="contact">
         <div class="contact-content">
-            <h2>Contact Me</h2>
-            <p>Have questions or want to stay updated? Reach out!</p>
-            <p class="form-instruction">Fill out the form below to connect.</p>
+            <h2>Contact Us</h2>
+            <p>Have questions about the book or the Sendforth Program? Feel free to reach out!</p>
             <div class="contact-layout">
-                <form name="contact" method="POST" data-netlify="true" class="contact-form">
+                <div class="contact-form" netlify>
+                    <input type="hidden" name="form-name" value="contact" />
+                    <div class="form-instruction">Please fill out the form below:</div>
                     <input type="text" name="name" placeholder="Your Name" required>
                     <input type="email" name="email" placeholder="Your Email" required>
-                    <textarea name="message" placeholder="Your Message" required></textarea>
-                    <div class="button-spacing">
-                        <button type="submit">Send Message</button>
-                    </div>
-                </form>
-                <img src="images/authorpic5.jpg" alt="Author Illustration" class="side-image">
+                    <textarea name="message" placeholder="Your Message" rows="5" required></textarea>
+                    <button type="submit">Send Message</button>
+                </div>
+                <img src="images/authorpic5.jpg" alt="Contact Illustration" class="side-image">
+            </div>
+            <div class="social-links">
+                <a href="https://www.facebook.com/share/16LDQ3vMWJ/?mibextid=wwXIfr" target="_blank" data-social="Facebook"><i class="fab fa-facebook-f"></i></a>
+                <a href="https://www.instagram.com/huntersolah?igsh=MWZoaWFwaTA3dzc0Zw%3D%3D&utm_source=qr" target="_blank" data-social="Instagram"><i class="fab fa-instagram"></i></a>
+                <a href="https://x.com/huntersola_v?s=21" target="_blank" data-social="Twitter"><i class="fab fa-twitter"></i></a>
+                <a href="https://www.linkedin.com/in/odesola-oluwafemi-0b6039b0?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3Bocd2dvfVR3%2BqgZa63bonQQ%3D%3D" target="_blank" data-social="LinkedIn"><i class="fab fa-linkedin"></i></a>
             </div>
         </div>
     </section>
