--- a/Pages/purchase.html
+++ b/Pages/purchase.html
@@ -10,7 +10,9 @@
 </head>
 <body class="about-book">
     <nav class="navbar">
-        <a href="index.html" class="logo">Oluwafemi Odesola</a>
+        <div class="contact-info">
+            <a href="mailto:oluwafemiodesola@gmail.com">oluwafemiodesola@gmail.com</a>
+        </div>
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="about-author.html">About</a></li>
@@ -18,18 +20,17 @@
             <li><a href="purchase.html">Purchase</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
-        <div class="contact-info">
-            <a href="mailto:oluwafemiodesola@gmail.com">oluwafemiodesola@gmail.com</a>
-        </div>
     </nav>
     <section class="purchase">
         <div class="book-card">
-            <img src="images/booksite2.jpg" alt="Book Cover">
-            <div class="book-card-text">
-                <h3>Jesus Revealed, Jesus Glorified</h3>
-                <p>Experience a transformative read that offers inspiration and insight into Christlike leadership. Secure your copy to join this spiritual journey.</p>
-                <div class="button-spacing">
-                    <a href="https://www.amazon.com" target="_blank" class="buy-now-btn">Buy on Amazon</a>
+            <div class="book-card-layout">
+                <img src="images/booksite2.jpg" alt="Book Cover">
+                <div class="book-card-text">
+                    <h3>Jesus Revealed, Jesus Glorified</h3>
+                    <p>Experience a transformative read that offers inspiration and insight into Christlike leadership. Secure your copy to join this spiritual journey.</p>
+                    <div class="button-spacing">
+                        <a href="https://www.amazon.com" target="_blank" class="buy-now-btn">Buy on Amazon</a>
+                    </div>
                 </div>
             </div>
         </div>
@@ -41,7 +42,7 @@
             <a href="https://x.com/huntersola_v?s=21" target="_blank" data-social="Twitter"><i class="fab fa-twitter"></i></a>
             <a href="#" target="_blank" data-social="LinkedIn"><i class="fab fa-linkedin"></i></a>
         </div>
-        <p>© 2025 Oluwafemi Odesola. All rights reserved.</p>
+        <p>Oluwafemi Odesola © 2025. All rights reserved.</p>
     </footer>
 </body>
 </html>
