--- a/Pages/about-book.html
+++ b/Pages/about-book.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Learn about 'Jesus Revealed, Jesus Glorified' by Oluwafemi Odesola, a tribute to Rev. Dr. John Akin Oyelade.">
-    <title>Book</title>
+    <title>About the Book</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body class="about-book">
     <nav class="navbar">
         <div class="contact-info">
-            <a href="mailto:oluwafemiodesola@gmail.com">oluwafemiodesola@gmail.com</a>
+            <!-- Email removed from header -->
         </div>
         <ul>
             <li><a href="index.html">Home</a></li>
