--- a/Pages/index.html
+++ b/Pages/index.html
@@ -11,7 +11,7 @@
 <body>
     <nav class="navbar">
         <div class="contact-info">
-            <a href="mailto:oluwafemiodesola@gmail.com">oluwafemiodesola@gmail.com</a>
+            <!-- Email removed from header -->
         </div>
         <ul>
             <li><a href="index.html">Home</a></li>
