--- a/Pages/purchase.html
+++ b/Pages/purchase.html
@@ -11,7 +11,7 @@
 <body class="about-book">
     <nav class="navbar">
         <div class="contact-info">
-            <a href="mailto:oluwafemiodesola@gmail.com">oluwafemiodesola@gmail.com</a>
+            <!--<a href="mailto:oluwafemiodesola@gmail.com">oluwafemiodesola@gmail.com</a>-->
         </div>
         <ul>
             <li><a href="index.html">Home</a></li>
@@ -28,9 +28,7 @@
                 <div class="book-card-text">
                     <h3>Jesus Revealed, Jesus Glorified</h3>
                     <p>Experience a transformative read that offers inspiration and insight into Christlike leadership. Secure your copy to join this spiritual journey.</p>
-                    <div class="button-spacing">
-                        <a href="https://www.amazon.com" target="_blank" class="buy-now-btn">Buy on Amazon</a>
-                    </div>
+                    <a href="https://www.amazon.com" target="_blank" class="buy-now-btn">Buy on Amazon</a>
                 </div>
             </div>
         </div>
