Improved device compatibility

--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -36,7 +36,7 @@
             </form>
             <img src="images/authorpic5.jpg" alt="Contact Illustration" class="side-image">
         </div>
-        <p class="additional-info">We’re here to assist you. Expect a response within 48 hours.</p>
+        <p class="additional-info">We’re here to assist you.</p>
         <p class="email-option">or email me at <a href="mailto:oluwafemiodesola@gmail.com">oluwafemiodesola@gmail.com</a></p>
     </section>
     <footer class="footer">
